--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,8 +3,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #333;
-  color: white;
+  background-color: black;
+  color: rgb(134, 13, 177);
+  width: 100%;
 }
 
 .header .logo {
