--- a/src/App.css
+++ b/src/App.css
@@ -39,14 +39,14 @@ button {
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #5cb85c;
+  background-color: #332859;
   color: white;
   cursor: pointer;
   font-size: 16px;
 }
 
 button:hover {
-  background-color: #4cae4c;
+  background-color: #6907F2;
 }
 
 .video-item {
@@ -78,11 +78,11 @@ button:hover {
 
 .video-item button {
   margin-right: 5px;
-  background-color: #d9534f;
+  background-color: #332859;
 }
 
 .video-item button:hover {
-  background-color: #c9302c;
+  background-color: #415CF2;
 }
 .container {
   flex: 1;
