--- a/src/components/Categories.css
+++ b/src/components/Categories.css
@@ -1,6 +1,8 @@
 .categories {
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #BF05F2;
+  position: relative; 
+  margin-top: 20px; 
 }
 
 .categories h2 {
@@ -17,18 +19,18 @@
   margin: 0 10px;
   padding: 10px 20px;
   border: none;
-  background-color: #e0e0e0;
+  background-color: #415CF2;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
 
 .category-button.active {
-  background-color: #4CAF50;
+  background-color: #332859;
   color: white;
 }
 
 .category-button:hover {
-  background-color: #d4d4d4;
+  background-color: #3F1973;
 }
 
 .category-list {
