Fix header and footer

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,6 +6,11 @@
   background-color: black;
   color: rgb(134, 13, 177);
   width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .header .logo {
