--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,14 +1,12 @@
 .footer {
-  width: 100%;
-  text-align: center;
-  padding: 20px;
   background-color: black;
   color: rgb(134, 13, 177);
-  position: relative; 
-  margin-top: 20px; 
-}
-
-.footer .logo {
-  font-size: 18px;
-  font-weight: bold;
+  text-align: center;
+  padding: 10px 20px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
