--- a/src/components/VideoForm.css
+++ b/src/components/VideoForm.css
@@ -1,24 +1,31 @@
-form {
-    background-color: #BF05F2; 
-    padding: 20px; 
-    border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    max-width: 400px; 
-    margin: auto; 
-  }
-  
+.video-form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #6907F2;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 0 auto;
+}
 
-  button {
-    background-color: #332859;
-    color: white; 
-    padding: 10px 20px; 
-    border: none; 
-    border-radius: 5px; 
-    cursor: pointer; 
-    transition: background-color 0.3s ease; 
-  }
-  
-  button:hover {
-    background-color: #415CF2; 
-  }
-  
+.video-form input,
+.video-form textarea,
+.video-form select,
+.video-form button {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+.video-form button {
+  background-color: #332859;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.video-form button:hover {
+  background-color: #415CF2;
+}
